# Pacman

./: .gitignore  CMakeLists.txt  Display.cpp  Display.h  Pacman.slnx  Pacman.vcxproj  Task.md  main.cpp
include/: Display.h  Ghost.h  display.h  ghost.h  input.h
src/: Display.cpp  Ghost.cpp  display.cpp  ghost.cpp  input.cpp  main.cpp
